--- a/src/main/webapp/resources/css/coursecss.css
+++ b/src/main/webapp/resources/css/coursecss.css
@@ -20,7 +20,7 @@ body {
     text-align: center;
 }
 .blog-card.spring-fever {
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1765/bg-blog-card.jpg) no-repeat;
+    background: url(../image/banner11.jpg);
 }
 .blog-card .color-overlay {
     /* Rectangle 11: */
