--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -7757,7 +7757,7 @@ button.bg-dark:focus {
 
 .mb-4,
 .my-4 {
-    margin-bottom: 1.5rem !important;
+    /*margin-bottom: 0.5rem !important;*/
 }
 
 .ml-4,
