--- a/src/main/webapp/resources/css/cafedetail.css
+++ b/src/main/webapp/resources/css/cafedetail.css
@@ -1,25 +1,20 @@
 .dPuFYu {
-    padding: 0px 0px 220px;
-    min-width: 1200px;
+
+    min-width: 1000px;
     min-height: calc(100vh - 400px);
+}
+
+.hj_mainimg{
+    position: relative;
+    width: 90%;
     margin: 0px auto;
 }
 
-
-.hj_mainimg > img:first-child
-{
+.hj_mainimg > img:first-child{
     width: 100%;
     height: 400px;
     border-radius: 8px;
-    margin: 40px 0px;
-}
-
-.hj_bmain
-{
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    margin: 70px 0px 0px;
+    margin: 0px 0px;
 }
 
 .hj_bhead
