--- a/src/main/webapp/resources/css/cafedetail.css
+++ b/src/main/webapp/resources/css/cafedetail.css
@@ -1,12 +1,11 @@
 .dPuFYu {
-
-    min-width: 1000px;
+    max-width: 1200px;
     min-height: calc(100vh - 400px);
 }
 
 .hj_mainimg{
     position: relative;
-    width: 90%;
+    max-width: 1200px;
     margin: 0px auto;
 }
 
