--- a/src/main/webapp/resources/css/cafedetail.css
+++ b/src/main/webapp/resources/css/cafedetail.css
@@ -11,7 +11,7 @@
 
 .hj_mainimg > img:first-child{
     width: 100%;
-    height: 400px;
+    height: auto;
     border-radius: 8px;
     margin: 0px 0px;
 }
